--- a/.github/workflows/pullRequests.yml
+++ b/.github/workflows/pullRequests.yml
@@ -15,3 +15,6 @@ jobs:
             path: ~/.symfony/cache
             key: db
       - uses: symfonycorp/security-checker-action@v4
+      - uses: php-actions/composer@v6
+      - name: finding vulnerabilities and weaknesses
+        uses: ./vendor/bin/phpcs --extensions=php,inc,lib,module,info --standard=./vendor/pheromone/phpcs-security-audit/example_base_ruleset.xml ./src/NotificationAPI/NotificationAPI.php
