--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "NotificationAPI SDK for server-side (back-end) PHP applications",
     "type": "library",
     "require": {
-      "php": ">=5.3.0"
+      "php": ">=5.3.0",
+      "pheromone/phpcs-security-audit": "2.0.1"
     },
     "license": "proprietary",
     "authors": [
@@ -28,5 +29,13 @@
           "NotificationAPI\\NotificationAPIProvider"
         ]
       }
+    },
+    "require-dev": {
+        "dealerdirect/phpcodesniffer-composer-installer": "dev-master"
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
-  }
+}
