--- a/.github/workflows/pullRequests.yml
+++ b/.github/workflows/pullRequests.yml
@@ -16,5 +16,7 @@ jobs:
             key: db
       - uses: symfonycorp/security-checker-action@v4
       - uses: php-actions/composer@v6
+
       - name: finding vulnerabilities and weaknesses
         run: ./vendor/bin/phpcs --extensions=php,inc,lib,module,info --standard=./vendor/pheromone/phpcs-security-audit/example_base_ruleset.xml ./src/NotificationAPI/NotificationAPI.php
+        continue-on-warning: false      
