--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,6 @@
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
-    }
+    },
+    "version": "0.2.0"
 }
